--- a/notebook/intro_python/1_install_python_and_intro_python_env.ipynb
+++ b/notebook/intro_python/1_install_python_and_intro_python_env.ipynb
@@ -11,6 +11,13 @@
     "- Linux\n",
     "- Mac\n",
     "\n",
+    "There are some ways to install python.\n",
+    "\n",
+    "We recommend you installing [conda](http://conda.pydata.org/docs/).\n",
+    "\n",
+    "With conda, you can easily install python and some scientific computing and data science packages.\n",
+    "\n",
+    "\n",
     "#### Windows\n",
     "\n",
     "Dowload the lastest version of Python ( MSI package) from the offficial site.\n",
@@ -45,21 +52,17 @@
    "source": [
     "### Conda Basci Usage\n",
     "\n",
-    "#### Create conda environment\n",
+    "List conda environments\n",
     "\n",
-    "~~~\n",
-    "    $ conda create -n myenv python=2\n",
-    "    # It will create environment **myenv** with python2.7 installed.\n",
-    "    \n",
-    "    $ source activate myenv o activate this environment\n",
-    "~~~\n",
+    "$ conda list -e\n",
     "\n",
+    "Create conda environment (**myenv** environment with python2.7 installed.)\n",
     "\n",
-    "$ conda info --env\n",
+    "$ conda create -n myenv python=2\n",
     "\n",
-    "$ conda info\n",
+    "Activate **myenv** environment\n",
     "\n",
-    "\n",
+    "$ source activate myenv\n",
     "\n",
     "[Get started with conda](http://pre.tir.tw/008/blog/output/conda-miniconda-python.html)\n"
    ]
@@ -75,11 +78,26 @@
     "\n",
     "[youtude-dl](https://github.com/rg3/youtube-dl/)\n",
     "\n",
+    "```\n",
     "$ pip install youtube-dl\n",
+    "```\n",
     "\n",
     "[speedtest-cli](https://github.com/sivel/speedtest-cli)\n",
     "\n",
-    "$ pip install speedtest-cli\n"
+    "```\n",
+    "$ pip install speedtest-cli\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "$ speedtest-cli\n",
+    "Retrieving speedtest.net configuration...\n",
+    "Retrieving speedtest.net server list...\n",
+    "...\n",
+    "Testing download speed........................................\n",
+    "Download: 5.44 Mbit/s\n",
+    "Testing upload speed..................................................\n",
+    "Upload: 0.62 Mbit/s\n",
+    "```\n"
    ]
   },
   {
@@ -96,8 +114,20 @@
     "\n",
     "Usage\n",
     "\n",
-    "$ virtualenv \n",
+    "Create a new virtual environment **hello_env**\n",
     "\n",
+    "```\n",
+    "$ virtualenv-2.7 hello_env\n",
+    "New python executable in hello_env/bin/python2\n",
+    "Also creating executable in hello_env/bin/python\n",
+    "Installing setuptools, pip...done.\n",
+    "```\n",
+    "\n",
+    "Activate this **hello_env** environment\n",
+    "\n",
+    "```\n",
+    "$ source hello_env/bin/activate\n",
+    "```\n",
     "\n",
     "In python3, we can use pyvenv instead of virtualenv.\n",
     "\n",
