--- a/notebook/intro_python/1_install_python_and_intro_python_env.ipynb
+++ b/notebook/intro_python/1_install_python_and_intro_python_env.ipynb
@@ -64,7 +64,9 @@
     "\n",
     "$ source activate myenv\n",
     "\n",
-    "[Get started with conda](http://pre.tir.tw/008/blog/output/conda-miniconda-python.html)\n"
+    "[Get started with conda](http://pre.tir.tw/008/blog/output/conda-miniconda-python.html)\n",
+    "\n",
+    "[Learn conda in 30 minutes](http://conda.pydata.org/docs/test-drive.html)"
    ]
   },
   {
@@ -74,6 +76,9 @@
     "# pip\n",
     "\n",
     "pip is a python package management system.\n",
+    "\n",
+    "Python has a vast collection of third-party modules.\n",
+    "\n",
     "We use it to  install and manage python modules.\n",
     "\n",
     "[youtude-dl](https://github.com/rg3/youtube-dl/)\n",
@@ -97,7 +102,11 @@
     "Download: 5.44 Mbit/s\n",
     "Testing upload speed..................................................\n",
     "Upload: 0.62 Mbit/s\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "If you want to see the application python can do,\n",
+    "this website [awesome-python](https://github.com/vinta/awesome-python)\n",
+    "maintains a list of awesome Python frameworks, libraries and software."
    ]
   },
   {
