--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "# conda installation\n",
     "\n",
-    "You can follow the [guide](http://conda.pydata.org/docs/installation.html).\n",
+    "You can follow this official installation [guide](http://conda.pydata.org/docs/installation.html).\n",
     "\n",
     "## windows\n",
     "\n",
@@ -58,7 +58,7 @@
     "since pip is included after Python2.7.9 and Python 3.4.\n",
     "\n",
     "If you don't have pip,\n",
-    "you can manually install it via the link\n",
+    "you can manually install it via this link\n",
     "[pip Installation](http://pip.readthedocs.org/en/stable/installing/)."
    ]
   }
