--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -10,6 +10,22 @@
    "source": [
     "# Prerequisite\n",
     "\n",
+    "## Target audience\n",
+    "\n",
+    "We assume you know\n",
+    "\n",
+    "- the basic concepts of programming\n",
+    "    + variable\n",
+    "    + basic type\n",
+    "    + Control Structures\n",
+    "    + function\n",
+    "\n",
+    "- basic HTML knowledge ( since we want to make a web crawler )\n",
+    "\n",
+    "\n",
+    "## System requirement\n",
+    "\n",
+    "\n",
     "Before the hour of code, we expect you\n",
     "\n",
     "- have installed the lastest conda (recommand) \n",
