--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -29,7 +29,7 @@
     "Before the hour of code, we expect you\n",
     "\n",
     "- have installed the lastest conda (recommand) \n",
-    "- have installed the lates python2.7 , pip"
+    "- have installed the latest python2.7 , pip"
    ]
   },
   {
