--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -397,8 +397,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Module"
+    "# Module\n",
+    "\n",
+    "A (pure) python module is a flile consisting of Python code.\n",
+    "\n",
+    "Grouping logically related code into a module\n",
+    "makes the code easier to understand and use.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
