--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -20,6 +20,8 @@
     "- if\n",
     "- for, while\n",
     "\n",
+    "## File IO\n",
+    "\n",
     "\n",
     "## Fuction\n",
     "\n",
@@ -361,6 +363,141 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# File IO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hello_file = open('hello.txt', 'w')\n",
+    "hello_file.write('hello, ')\n",
+    "hello_file.write('world\\n')\n",
+    "hello_file.write('How are you?\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!cat hello.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hello_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!cat hello.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!rm hello.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('hello.txt', 'w') as hello_file:\n",
+    "    hello_file.write('hello, world\\n')\n",
+    "    hello_file.write('How are you?\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!cat hello.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for line in open('hello.txt'):\n",
+    "    print '#', line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for line in open('hello.txt'):\n",
+    "    print '#', line,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!rm hello.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -377,7 +514,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "def cal_bmi(weight_in_kg ,height_in_cm):\n",
     "    return weight_in_kg / (height_in_cm/100.0)**2"
    ]
@@ -390,7 +526,19 @@
    },
    "outputs": [],
    "source": [
-    "cal_bmi(170,60)"
+    "cal_bmi(60, 170)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Module\n",
+    "\n",
+    "A (pure) python module is a flile consisting of Python code.\n",
+    "\n",
+    "Grouping logically related code into a module\n",
+    "makes the code easier to understand and use.\n"
    ]
   },
   {
@@ -409,10 +557,91 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "print math.sin(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "print os.path.isfile('person.py')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\n",
+    "#### save the following code as person.py\n",
+    "\n",
+    "```python\n",
+    "def cal_bmi(height_in_cm, weight_in_kg):\n",
+    "    return weight_in_kg / (height_in_cm/100.0)**2\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if not os.path.isfile('person.py'):\n",
+    "    with open('person.py', 'w') as person_f:\n",
+    "        person_f.write('def cal_bmi(height_in_cm, weight_in_kg):\\n')\n",
+    "        person_f.write('    return weight_in_kg / (height_in_cm/100.0)**2\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!cat person.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import person\n",
+    "\n",
+    "person.cal_bmi(170, 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "!rm -rf person.py person.pyc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -454,7 +683,7 @@
    "outputs": [],
    "source": [
     "john = Person('John', 170, 60)\n",
-    "mary = Person('Mary', 160, 50)"
+    "marry = Person('Mary', 160, 50)"
    ]
   },
   {
