--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -77,6 +77,58 @@
     "you can manually install it via this link\n",
     "[pip Installation](http://pip.readthedocs.org/en/stable/installing/)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Why Python - Life is short, you need Python.\n",
+    "\n",
+    "\n",
+    "## Python is easy to learn and use\n",
+    "  + Simpler syntax\n",
+    "  + Readable pseudo-code\n",
+    "  + Expressive and succinct\n",
+    "\n",
+    "## General-purpose\n",
+    "\n",
+    "  + [Extensive Libraries](https://github.com/vinta/awesome-python)\n",
+    "\n",
+    "## Quick/Rapid prototype\n",
+    "\n",
+    "## Strong/Active community\n",
+    "\n",
+    "## Python is free\n",
+    "\n",
+    "\n",
+    "## Python is Fun"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# Develop Tool\n",
+    "\n",
+    "\n",
+    "## Editor\n",
+    "\n",
+    "[Sublime Text](http://www.sublimetext.com/)\n",
+    "\n",
+    "## IDE\n",
+    "\n",
+    "[PyCharm](https://www.jetbrains.com/pycharm/)\n",
+    "\n",
+    "\n",
+    "## Terminal - pwd, ls, cd\n",
+    "\n",
+    " - [cmder](http://cmder.net/) Windows\n",
+    "\n",
+    " - [iTerm2](https://www.iterm2.com/) Mac\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
