2_python_quick_learning.ipynb

--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -32,11 +32,29 @@
     "## Class\n",
     "\n",
     "\n",
-    "## Reference\n",
+    "## Nexts\n",
     "\n",
-    "[Learn X in Y minutes](http://learnxinyminutes.com/docs/python/)\n",
+    "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "[ipython](http://ipython.org/)\n",
+    "\n",
+    "A powerful interactive Python shell\n",
+    "\n",
+    "All the following code can be run in ipython.\n",
+    "\n",
+    "\n",
+    "If ipython is not avaible in your system, run the following command.\n",
+    "```\n",
+    "$ pip install ipython\n",
+    "```"
    ]
   },
   {
@@ -706,6 +724,21 @@
    "outputs": [],
    "source": [
     "john.bmi()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "[Learn X in Y minutes](http://learnxinyminutes.com/docs/python/)\n",
+    "\n",
+    "[LEARN PYTHON THE HEARD WAY](http://learnpythonthehardway.org/book/)\n",
+    "\n",
+    "[The Hitchhiker’s Guide to Python](http://docs.python-guide.org/en/latest/)\n",
+    "\n",
+    "[Python free-programming-books](https://github.com/vhf/free-programming-books/blob/master/free-programming-books.md#python)\n"
    ]
   }
  ],
