--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -526,11 +526,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def cal_bmi(weight_in_kg ,height_in_cm):\n",
     "    return weight_in_kg / (height_in_cm/100.0)**2"
@@ -670,6 +678,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'john', 'weight': 60, 'height': 170} 20.7612456747\n",
+      "{'name': 'mary', 'weight': 50, 'height': 160} 19.53125\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Life \n",
+    "\n",
+    "john = {'name': 'john', 'height': 170, 'weight': 60}\n",
+    "marry = {'name': 'mary', 'height': 160, 'weight': 50}\n",
+    "\n",
+    "def calculate_bmi(person):\n",
+    "    p_cm = person['height']\n",
+    "    p_kg = person['weight']\n",
+    "    return cal_bmi(p_kg, p_cm)\n",
+    "\n",
+    "print john, calculate_bmi(john)\n",
+    "print marry, calculate_bmi(marry)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -732,7 +771,7 @@
    "source": [
     "# Next Steps\n",
     "\n",
-    "[Learn X in Y minutes](http://learnxinyminutes.com/docs/python/)\n",
+    "[Learn X in Y minutes Where X=python](http://learnxinyminutes.com/docs/python/)\n",
     "\n",
     "[LEARN PYTHON THE HEARD WAY](http://learnpythonthehardway.org/book/)\n",
     "\n",
@@ -740,6 +779,24 @@
     "\n",
     "[Python free-programming-books](https://github.com/vhf/free-programming-books/blob/master/free-programming-books.md#python)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
