--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -693,7 +693,7 @@
     }
    ],
    "source": [
-    "# Life \n",
+    "# Life without class\n",
     "\n",
     "john = {'name': 'john', 'height': 170, 'weight': 60}\n",
     "marry = {'name': 'mary', 'height': 160, 'weight': 50}\n",
@@ -779,24 +779,6 @@
     "\n",
     "[Python free-programming-books](https://github.com/vhf/free-programming-books/blob/master/free-programming-books.md#python)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
