--- a/notebook/intro_python/1_install_python_and_intro_python_env.ipynb
+++ b/notebook/intro_python/1_install_python_and_intro_python_env.ipynb
@@ -64,9 +64,14 @@
     "\n",
     "$ source activate myenv\n",
     "\n",
+    "$ conda install jupyter\n",
+    "\n",
     "[Get started with conda](http://pre.tir.tw/008/blog/output/conda-miniconda-python.html)\n",
     "\n",
-    "[Learn conda in 30 minutes](http://conda.pydata.org/docs/test-drive.html)"
+    "[Learn conda in 30 minutes](http://conda.pydata.org/docs/test-drive.html)\n",
+    "\n",
+    "Remove conda environment\n",
+    "$ conda env remove -n myenv"
    ]
   },
   {
