--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -106,6 +106,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python2 or Python3\n",
+    "\n",
+    "\n",
+    "## Library compatibility with Python 3?\n",
+    "\n",
+    "Choose a version comes down to the libraries you need\n",
+    "\n",
+    "The end of life of Python2.7 is 2020."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
