--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "[ipython](http://ipython.org/)\n",
+    "## [ipython](http://ipython.org/)\n",
     "\n",
     "A powerful interactive Python shell\n",
     "\n",
